# computer-price

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  run_pipeline.py
.claude/: settings.local.json
.github/workflows/: ci.yml  crawl.yml
docker/airflow/: Dockerfile
docker/consumer/: Dockerfile
docker/crawler/: Dockerfile
docker/dashboard/: Dockerfile
docs/: _benchmark_after.json  _benchmark_before.json  benchmark_results.md  crawl_failure_isolation.md  decisions.md  schema.dbml  stream_migration_performance.md
migrations/versions/: 001_initial_schema.sql  002_index_and_constraint_fixes.sql  003_price_history_site_constraint.sql
scripts/: benchmark_page_load.py  benchmark_stream_scan.py  danawa_live_test.py  danawa_recon_category.py  danawa_recon_product.py  danawa_recon_search.py  snowflake_connection_test.py  snowflake_pipeline.py  snowflake_setup_ddl.py
snowflake/ddl/: 001_create_database.sql  002_create_tables.sql  003_user_watch_products.sql  004_schema_refactor.sql  005_pipeline_runs.sql  006_streams.sql  007_latest_prices_to_view.sql
src/airflow_dags/: crawl_dag.py  snowflake_pipeline_dag.py
src/common/: config.py  db.py  kafka_client.py  logging_config.py  models.py  serialization.py  snowflake_client.py
src/consumers/: alert_service.py  change_detector.py  snowflake_loader.py
src/crawlers/: base.py  compuzone.py  danawa.py  parser_utils.py  pc_estimate.py
src/dashboard/: app.py  callbacks.py  helpers.py
src/pipeline/: analytics.py  crawl.py  detect.py  load_raw.py  observability.py  quality.py  slack.py  transform.py
tests/: conftest.py
tests/integration/: conftest.py  test_aggregate_analytics.py  test_detect_changes.py  test_full_pipeline.py  test_load_raw.py  test_transform_staging.py
tests/unit/: test_compuzone_crawler.py  test_danawa_crawler.py  test_dashboard_error_handling.py  test_models.py  test_observability.py  test_parser_utils.py  test_pc_estimate_crawler.py  (+2 more)
(+12 files in other folders)
